--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -27,6 +27,13 @@ a {
   transition: color 0.2s, background-color 0.2s, border-color 0.2s; }
   .btn + .btn {
     margin-left: 1rem; }
+.pic{
+  width: 250px;
+  border-color: rgb(114,218,252);
+  border-width: 2px;
+  border-radius: 80%;
+  border-style:solid
+}
 
 .btn:hover {
   color: rgba(255, 255, 255, 0.8);
